--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@page
+@page
 @model IndexModel
 @{
     ViewData["Title"] = "Chat";
@@ -29,7 +29,7 @@
         <!-- Messages -->
         <div id="chat-messages" class="flex-grow-1 overflow-auto p-3">
             <div class="text-center text-muted mt-5">
-                <h4>Welcome to FoundryWebUI</h4>
+                <h4>Welcome to FoundryLocalWebUI</h4>
                 <p>Select a model and start chatting</p>
             </div>
         </div>
